--- a/_posts/2022-08-08-new post.md
+++ b/_posts/2022-08-08-new post.md
@@ -4,6 +4,7 @@ author: cotes
 date: 2022-08-08 11:33:00 +0800
 categories: [Blogging, Demo]
 tags: [typography]
+pin: true
 math: true
 mermaid: true
 image:
