--- a/_posts/2022-08-25-dm-01.md
+++ b/_posts/2022-08-25-dm-01.md
@@ -1,20 +1,18 @@
 ---
-title: CSCI 381 - Data Modeling and Advanced Database Systems
+title: CSCI 381 - Data Modeling and Advanced Database Systems 1
 author: Adrian Noa
 date: 2022-08-25 09:02:00 -400
 categories: [Data Modeling, Databases]
-tags: [Peter Heller, MySQL]
+tags: [Peter Heller, CSCI381, class01]
 pin: false
 math: true
 mermaid: true
 image:
-  path: /381-datamodeling/logo.png
+  path: /dm/logo.png
   width: 800
   height: 500
   alt: Responsive rendering of Chirpy theme on multiple devices.
 ---
-
-<h1 style='color:#123499'>hello</h1>
 
 # **CSCI 381 - Data Modeling and Advanced Database Systems**
 
@@ -32,11 +30,3 @@ What is a fully qualified object in MYSQL?
 - Dynamic Data masking : Hiding information based upon provildge. Supported by most ANSCI SQL databases
 
 
-```mermaid
-
-flowchart LR
-    A[Hard] -->|Text| B(Round)
-    B --> C{Decision}
-    C -->|One| D[Result 1]
-    C -->|Two| E[Result 2]
-```
