+change tag icon + posts modified + images for dm01

--- a/_posts/2022-08-25-cv-01.md
+++ b/_posts/2022-08-25-cv-01.md
@@ -3,12 +3,12 @@ title: CSCI 381 - Computer Vision 1
 author: Adrian Noa
 date: 2022-08-25 15:02:00 -400
 categories: [Computer Vision, Image ]
-tags: [Peter Heller, CSCI381, class01]
+tags: [CSCI381, class01]
 pin: false
 math: true
 mermaid: true
 image:
-  path: /dm/logo.png
+  path: /cv/logo.png
   width: 800
   height: 500
   alt: Responsive rendering of Chirpy theme on multiple devices.
@@ -20,16 +20,17 @@ image:
 
 <img src="/break.png">
 
-What is a fully qualified object in MYSQL?
-
-- No concept of ownership in MySQL, thus table names are in the `User.TableName` format
-- CamelCase
-
-- GDPR : European Union General Data Protection Regulation(applies to global companies)
-
-- Dynamic Data masking : Hiding information based upon provildge. Supported by most ANSCI SQL databases
+What is Computer Vision?
 
 
+## Taxonomy of Computer Vision
+
+```mermaid
+flowchart TD
+  A[Increased amount of Word Knowledge]
+  B[Word Model] --> C((Matching))
+
+```
 
 
 
