--- a/_posts/2022-08-25-dm-01.md
+++ b/_posts/2022-08-25-dm-01.md
@@ -1,9 +1,9 @@
 ---
-title: CSCI 381 - Data Modeling and Advanced Database Systems 1
+title: CSCI 381 - Data Modeling and Advanced Systems 1
 author: Adrian Noa
 date: 2022-08-25 09:02:00 -400
 categories: [Data Modeling, Databases]
-tags: [Peter Heller, CSCI381, class01]
+tags: [CSCI381, class01]
 pin: false
 math: true
 mermaid: true
@@ -16,10 +16,8 @@ image:
 
 # **CSCI 381 - Data Modeling and Advanced Database Systems**
 
-## **Prof. Peter Heller**
-
-<img src="/break.png">
-
+**Prof. Peter Heller**
+---
 What is a fully qualified object in MYSQL?
 
 - No concept of ownership in MySQL, thus table names are in the `User.TableName` format
@@ -29,4 +27,30 @@ What is a fully qualified object in MYSQL?
 
 - Dynamic Data masking : Hiding information based upon provildge. Supported by most ANSCI SQL databases
 
+<img src="/break.png">
 
+# Data Modeling, Governance and Quality
+
+Data Governance is often referred to as the **people, processes, and policies around data** and information. These are critical to the success of any implementation
+
+**Technical Infrastructure** supports the diverse data environments that run the business
+
+Data models can be the critical **link between business definitions and rules and the technical data systems taht support them.** Without their valuable metadata, governance lacks the robustness to be applied in operational and reporting systems
+
+Self Service data prep and analytics add complexity, as a **more diverse set of users has access to manipulate, model, and report on enterprise data**
+
+How to integrate governance to **balance Enterprise Standards with Self-Service Agility?**
+
+<img src="/dm/01-01.png">
+
+## **What is a Data Model?**
+
+A data model translates regulations, policies and procedures to the Technical Data System & Structures that support them
+
+**Technical Metadata** describes the structure, format, and rules for storing data
+
+**Business Metadata** describes the business definitions, rules, and context
+
+**Data** represents actual instances
+
+<img src="/dm/01-02.png">
