data modeling class one

--- a/_posts/2022-08-25-dm-01.md
+++ b/_posts/2022-08-25-dm-01.md
@@ -54,3 +54,58 @@ A data model translates regulations, policies and procedures to the Technical Da
 **Data** represents actual instances
 
 <img src="/dm/01-02.png">
+
+## Business vs Technical Metadata
+
+Business Metadata|Technical Metadata
+-|-
+Definitions & Glossary|Column structure of a database table
+Organization information|Domains, data type and length
+Privacy and Security levels|Keys, validation rules, permissions
+Acronyms and Abbreviations|Standard Abbreviations
+
+**What is a customer?**
+* A customer is a person or organization who purchases a product or service from...**VS**
+* CUST_LNM is VARCHAR(30) on Oracle db CustDB1
+
+## Human Metadata
+
+Much business metadata and history exists in employee's memory(*AVOID*)
+
+Capture this metadata in an electronic format to share with others
+
+## Publishing Business Definitions in a Data Model
+
+**Data Models** are a great place to store business definitions
+* Display them on the model for a business audience
+* Store them in the model repository for reuse across the organization (various users, tool, etc)
+
+<img src="/dm/01-03.png">
+
+## Creating a Technical Data Inventory
+Linking business definitions to technical implementations
+* Data models and the associated metadata can create a real-world inventory of the data storage associated with key business data domains in the control of a data governance program
+
+<img src="/dm/01-04.png">
+
+## Data Lineage
+Metadata for CUSTOMER exists in a number of tools and data stores
+* This lineage can be tracked in many data modeling tools and associated metadata and governance solutions
+
+<img src="/dm/01-05.png">
+
+## Technical Metadata makes Data Governance Actionable
+Data models are a good vehicle for this
+* Data models can help take the **business rules and definitions in policies** and make them **actionable in physical systems**, maintaining a lineage and audit trail
+
+<img src="/dm/01-06.png">
+
+## Data Quality Improvement
+Why bother?
+
+* 7.5 quintillion bytes on new data create everyday
+* 90% of all data was created from 2015-2017
+* Average business data volumes **double every 1.2 years** 
+
+## Data Quality Problems
+In a study involving 75 executives, only 3% found their departments fell within the minimum acceptable range of 97 or more correct data records out of 100
