data modeling class 1

--- a/_posts/2022-08-25-dm-01.md
+++ b/_posts/2022-08-25-dm-01.md
@@ -31,7 +31,9 @@ What is a fully qualified object in MYSQL?
 
 # Data Modeling, Governance and Quality
 
-Data Governance is often referred to as the **people, processes, and policies around data** and information. These are critical to the success of any implementation
+`Data Governance` is often referred to as the **people, processes, and policies around data** and information. These are critical to the success of any implementation
+
+`A management framework for data accountability and data improvement`
 
 **Technical Infrastructure** supports the diverse data environments that run the business
 
@@ -45,6 +47,8 @@ How to integrate governance to **balance Enterprise Standards with Self-Service 
 
 ## **What is a Data Model?**
 
+`Data Modeling is the visual representation of data relationships and their physical storage in technical platforms`
+
 A data model translates regulations, policies and procedures to the Technical Data System & Structures that support them
 
 **Technical Metadata** describes the structure, format, and rules for storing data
@@ -52,6 +56,8 @@ A data model translates regulations, policies and procedures to the Technical Da
 **Business Metadata** describes the business definitions, rules, and context
 
 **Data** represents actual instances
+
+***All Personally Identifiable Information (PII) must be anonymized for the purpose of information sharing between departments***
 
 <img src="/dm/01-02.png">
 
@@ -103,9 +109,96 @@ Data models are a good vehicle for this
 ## Data Quality Improvement
 Why bother?
 
+`Data Quality is the approach and tools used to improve data accuracy, completeness and consistency`
+
 * 7.5 quintillion bytes on new data create everyday
 * 90% of all data was created from 2015-2017
 * Average business data volumes **double every 1.2 years** 
 
 ## Data Quality Problems
 In a study involving 75 executives, only 3% found their departments fell within the minimum acceptable range of 97 or more correct data records out of 100
+
+## Industry Statistics
+Raw data used in Self-Service Analytics and BI environments is
+often so poor that many data scientists and BI professionals
+spend an estimated 50 – 90% of their time cleaning and
+reformatting data to make it fit for purpose.
+
+Correcting poor data quality is a Data Scientist’s least favorite
+task, consuming on average 80% of their working day
+
+The US economy loses $3.1 trillion a year
+because poor data quality
+
+Lack of effective Data Governance and the absence of shared
+data definitions and metadata cited as main impediments to
+the success of Data Lakes
+
+## Why Data Quality and Data Governance can FAIL
+* Lack of business leadership and commitment
+* Failure to link DQ/GV to organizational goals and benefits
+* Failure to focus on the data that really matters
+* Giving people data responsibility but not equipping them to succeed
+* Placing too much emphasis on monitoring and not **data improvement**
+* Thinking new technology alone will solve the problems
+* Forgetting DQuality/DGovernance must **embrace all who use data** across an organization
+* Not delivering business value early and regularly
+
+`Problems often emerge far away from the cause` - Newtown's Cradle Effect
+
+<img src="/dm/01-07.png">
+
+Know what to manage closely and waht to leave alone
+
+*As a general rule, **the more data is shared across and beyond the organization, the more formal governance needs to be***
+
+<img src="/dm/01-08.png">
+
+## The Rise of Self-Service **Business Intelligence, Analytics and Data Prep**
+
+The interest in self-service data reporting has increased among data-savvy business users
+* Availability of tools and data sets has made it easier for business people to **do their own data manipulation and reporting**
+* Offers great opportunities, can also become challenging
+* Data modelers and the models & metadata they create can make the job of business intelligence easier for both BI priofessionals and the casual BI reporting user(Enterprise-wide, standardized data)
+* What about non-standard, non-relational, and discovery data?
+
+1. **Glossaries, data models** - Published documentation, metadata, standard definitions
+2. **Self-Service data prep and analysis tools** - integration of data sets with self explored data for analysis and modeling
+3. **Master Data, Data Warehouse** - standardized data sets
+4. **Data Cataloguing & Crowdsourcing** - Leveraging existing work, filtering by most relevance
+
+It is important to find the right balance when implementing successful data governance in today's self-service data landscape
+
+* **Standards-based Governance** - suited for enterprise-wide data standards
+* **Collaboration-based Governance** - open souce, suited for self-service data preparation & analytics
+
+These two methods **work well together**, depending on the data usage
+
+## Usage Ranking
+
+- Which queries are others using?
+- Which tables are accessed the most?
+- Which glossary terms are most often searched?
+
+## Helpfulness Ranking
+
+- Which definitions are most complete and helpful?
+- Which algorithms offer a helpful starting point?
+- Which queries offer great logic to share?
+
+# Summary
+
+`Data Governance requires a mix of people, processes and technologies`
+
+`Data models & metadata support the policies & procedures defines by data governance`
+
+`Data Model metadata supports actionable data governance through`
+* Linking business & technical definitions & business rules
+* Providing standardization & consistency
+* Supporting data lineage & audit trails
+
+`It is important to stablish the right level of governance for each unique data use case`
+
+`Self-Service data prep & analytics require a new paradign for "crowdsourcing" metadata`
+
+`A combination of standards-driven + collaborative governance provides a powerful mix that offers value across the organization`
