data modeling class 1

--- a/_posts/2022-08-25-dm-01.md
+++ b/_posts/2022-08-25-dm-01.md
@@ -2,8 +2,8 @@
 title: CSCI 381 - Data Modeling and Advanced Systems 1
 author: Adrian Noa
 date: 2022-08-25 09:02:00 -400
-categories: [Data Modeling, Databases]
-tags: [CSCI381, class01]
+categories: [Databases]
+tags: [class01, Data Modeling, Data Governance, Data Quality]
 pin: false
 math: true
 mermaid: true
@@ -35,9 +35,11 @@ What is a fully qualified object in MYSQL?
 
 `A management framework for data accountability and data improvement`
 
+Business process owners need to come together to agree on terminology. Setting standards or logic to keep naming conventions intact so a framework can be built around it.
+
 **Technical Infrastructure** supports the diverse data environments that run the business
 
-Data models can be the critical **link between business definitions and rules and the technical data systems taht support them.** Without their valuable metadata, governance lacks the robustness to be applied in operational and reporting systems
+Data models can be the critical **link between business definitions and rules and the technical data systems that support them.** Without their valuable metadata, governance lacks the robustness to be applied in operational and reporting systems
 
 Self Service data prep and analytics add complexity, as a **more diverse set of users has access to manipulate, model, and report on enterprise data**
 
