db class 1 category

--- a/_posts/2022-08-25-dm-01.md
+++ b/_posts/2022-08-25-dm-01.md
@@ -2,7 +2,7 @@
 title: CSCI 381 - Data Modeling and Advanced Systems 1
 author: Adrian Noa
 date: 2022-08-25 09:02:00 -400
-categories: [Databases]
+categories: [Databases, Data Governance Modeling and Quality]
 tags: [class01, Data Modeling, Data Governance, Data Quality]
 pin: false
 math: true
