data modeling class 2

--- a/_posts/2022-08-25-cv-01.md
+++ b/_posts/2022-08-25-cv-01.md
@@ -22,6 +22,8 @@ image:
 
 What is Computer Vision?
 
+Interdisciplinary scientific field that studies/researches on how to perform tasks that the human visual system can do from images & video
+
 
 ## Taxonomy of Computer Vision
 
