--- a/_posts/2022-08-25-dm-01.md
+++ b/_posts/2022-08-25-dm-01.md
@@ -11,7 +11,7 @@ image:
   path: /dm/logo.png
   width: 800
   height: 500
-  alt: Responsive rendering of Chirpy theme on multiple devices.
+  alt: 
 ---
 
 # **CSCI 381 - Data Modeling and Advanced Database Systems**
