+author changed +posts autho change +data modeling course overview post

--- a/_posts/2022-08-25-due.md
+++ b/_posts/2022-08-25-due.md
@@ -1,6 +1,6 @@
 ---
 title: Important Dates
-author: Adrian Noa
+author: adrian
 date: 2022-08-25 22:02:00 -400
 categories: [Assignments, Data Science, Data Modeling, Computer Vision ]
 tags: []
