--- a/_posts/2022-08-25-cv-01.md
+++ b/_posts/2022-08-25-cv-01.md
@@ -1,6 +1,6 @@
 ---
 title: CSCI 381 - Computer Vision 1
-author: Adrian Noa
+author: adrian
 date: 2022-08-25 15:02:00 -400
 categories: [Computer Vision, Image ]
 tags: [CSCI381, class01]
