--- a/_posts/2022-08-25-dm-02.md
+++ b/_posts/2022-08-25-dm-02.md
@@ -1,6 +1,6 @@
 ---
 title: CSCI 381 - Data Modeling and Advanced Systems 2
-author: Adrian Noa
+author: adrian
 date: 2022-08-25 09:02:00 -400
 categories: [Databases]
 tags: [class01, Data Modeling, Data Governance, Data Quality]
