Due dates and Data Modeling Course Overview

--- a/_posts/2022-08-25-due.md
+++ b/_posts/2022-08-25-due.md
@@ -16,4 +16,18 @@ image:
 
 # **EXAMS**
 
-## **Computer Vision 1st Exam - September 20**
+## **Computer Vision**
+
+## **1st Exam** - Tuesday, September 20
+
+
+
+## **Fundamentals of Data Science and Machine Learning**
+
+## **Project 1** due at 4 PM - Friday, October 7
+## **Midterm** exam in class - Tuesday, October 25
+## **Project 2** due at 4 PM - Friday, November 11
+## **Project 2** due at 4 PM - Friday, November 18
+## **Final Project plans due** at 4 PM - Friday, November 18 
+## **Final reports and project deliverables** due at 4 PM - December 13 –
+## **Final presentations** - December 14 through Tuesday, December 20
