algorithsm for big data

--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -17,6 +17,7 @@ tabs:
   datamodeling: Data Modeling
   datascience: Applied Data Science
   computervision: Computer Vision
+  bigdata: Big Data Algorithms
 
 
 # the text displayed in the search bar & search results
